--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,9 @@ extend-include = ["*.ipynb"]
 extend-select = ["I", "D"]
 ignore = ["E731"]
 
+[tool.ruff.lint.isort]
+known-first-party = ["gs"]
+
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
 
